fixed alignment v2

--- a/src/app/main-component/main-component.component.css
+++ b/src/app/main-component/main-component.component.css
@@ -1,7 +1,7 @@
-app-messages {
+.messages {
     width: 100%;
     position: absolute;
-    margin-bottom: 48px;
+    margin-bottom: 10%;
 }
 
 app-chat-input {
