--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -1,27 +1,25 @@
 .message-area {
     margin-top: 72px;
-    margin-bottom: 72px;
+    margin-bottom: 100px;
     padding: 8px;
 }
 
-.message {
-    width: 50%;
-    padding: 24px;
-    margin: 8px;
-}
+/*.message {*/
+    /*width: 50%;*/
+    /*padding: 24px;*/
+    /*margin: 8px;*/
+/*}*/
 
 .sender {
     width: 50%;
-    padding: 24px;
-    margin: 8px;
+    padding: 16px;
     float: right;
     text-align: end;
 }
 
 .recipient {
     width: 50%;
-    padding: 24px;
-    margin: 8px;
+    padding: 16px;
     float: left;
     text-align: start;
 }
